--- a/scripts/config.yml
+++ b/scripts/config.yml
@@ -5,5 +5,6 @@ exclude:
   - ._evil
   - readme.md
   - _drafts
-server_url: http://192.168.20.250:3000
+server_url: http://localhost:3000
+#server_url: http://pcs.rainboy.cc
 key: mytoken
