--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^4.11.1",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
+    "serve-favicon": "^2.4.5",
     "shortid": "^2.2.8"
   }
 }
