--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "body-parser": "~1.17.1",
+    "compression": "^1.7.2",
     "cors": "^2.8.4",
     "debug": "~2.6.3",
     "express": "~4.15.2",
