--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "html-webpack-plugin": "^2.30.1",
     "iview": "^2.4.0",
-    "rmarked": "git+https://github.com/BlogProject/rmarked.git",
+    "md5": "^2.2.1",
+    "rmarkedEditor": "git+https://github.com/BlogProject/rmarkedEditor",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "vue": "^2.4.4",
+    "vue-input-tag": "^1.0.3",
     "vue-router": "^2.7.0",
     "vuex": "^2.4.1"
   },
@@ -22,6 +24,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
